--- a/drugdecisions.html
+++ b/drugdecisions.html
@@ -16,7 +16,7 @@
     <div style="height: 100%; width: 100%;" id='container'></div>
 
     <script>
-    var rt = window.retool.RetoolDashboard(document.getElementById('container'), 'https://retool.yoursite.com/apps/embedded-app')
+    var rt = window.retool.RetoolDashboard(document.getElementById('container'), 'https://medicuja.retool.com/embedded/public/d1bb5d0e-2dd6-42b8-b1b9-72a3db75cb19')
     </script>
   </body>
 </html>
